# Zpace

./: .gitignore  .pre-commit-config.yaml  .zpace.toml.sample  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.md  main.py  pyproject.toml  test.py  testVersions.sh  test_.py  test_integration.py  test_main.py  test_unit.py
.github/: review_system_prompt.txt
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml  review.yml  tests.yml  trivia.yml
apps/macos/: CHANGELOG.md
apps/macos/Zpace/: ContentView.swift  Info.plist  ZpaceApp.swift
apps/macos/Zpace.xcodeproj/: project.pbxproj
apps/macos/Zpace.xcodeproj/project.xcworkspace/xcuserdata/azis.xcuserdatad/: UserInterfaceState.xcuserstate
apps/macos/Zpace.xcodeproj/xcuserdata/azis.xcuserdatad/xcschemes/: xcschememanagement.plist
apps/windows/: App.xaml  App.xaml.cs  CHANGELOG.md  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  README.md  Zpace.csproj  app.manifest
zpace/: config.py  core.py  main.py  output.py  utils.py
