[project]
name = "zpace"
version = "0.5.0"
description = "A CLI tool to discover what's consuming your disk space"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ąžuolas Krušna", email = "azuolas.krusna@yahoo.com" }
]
keywords = ["disk", "storage", "analyze", "cli", "space", "cleanup", "file"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

dependencies = [
    "tqdm>=4.67.1",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
zpace = "zpace.main:main"

[dependency-groups]
test = [
    "pyfakefs>=5.10.2",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
lint = [
    "mypy>=1.18.2",
    "types-tqdm>=4.67.0.20250809",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    "pre-commit>=4.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
exclude = ["test_.*\\.py$"]

[tool.hatch.build.targets.wheel]
include = ["zpace"]
